Adicionado validação da request para o login
