# app-cep-swagger.json
@@ -28,6 +28,38 @@
                   }
                 }
               }
+            },
+            "422": {
+              "description": "Erro de validação",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "type": "object",
+                    "properties": {
+                      "message": {
+                        "type": "string"
+                      },
+                      "errors": {
+                        "type": "object",
+                        "properties": {
+                          "email": {
+                            "type": "array",
+                            "items": {
+                              "type": "string"
+                            }
+                          },
+                          "password": {
+                            "type": "array",
+                            "items": {
+                              "type": "string"
+                            }
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
+              }
             }
           },
           "requestBody": {
