# app/Http/Requests/AuthenticationRequest.php
@@ -1,0 +1,21 @@
+<?php
+
+namespace App\Http\Requests;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class AuthenticationRequest extends FormRequest
+{
+    public function authorize(): bool
+    {
+        return true;
+    }
+    
+    public function rules(): array
+    {
+        return [
+            'email' => 'required|email',
+            'password' => 'required|string',
+        ];
+    }
+}
